lesson-25/k8s/example-2/deploy-svc-app-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-3
  labels:
    app: kuber-3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server-3
  template:
    metadata:
      labels:
        app: http-server-3
    spec:
      containers:
      - name: kuber-app
        image: bakavets/kuber:v3.0
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-3
spec:
  selector:
    app: http-server-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
